# keepass-diff

./: .gitignore  Cargo.toml  Containerfile.install  Dockerfile  LICENSE  Makefile  README.md  create-test-snapshots.sh  docs_build.rs  docs_template.html  run-tests.sh
.cargo/: config.toml
.github/workflows/: run-checks.yml
docs/: CNAME  index.html
src/: entry.rs  lib.rs  main.rs
src/apply/: mod.rs
src/diff/: entries.rs  entry.rs  field.rs  group.rs  mod.rs
src/stack/: mod.rs
src/string_stack/: mod.rs
test/: keyfile.key  test2.kdbx  test2_file.kdbx  test_file.kdbx
test/__fixtures__/: empty.kdbx  issue-60-crash-on-linux-abc123.kdbx  large-withfile.kdbx  multiple-entries-2.kdbx  multiple-entries.kdbx  no-group-name.kdbx  no-group-name2.kdbx  same-groups-2.kdbx  same-groups.kdbx  single-root-entry.kdbx  test.kdbx  two-root-entries-without-title.kdbx  two-root-entries.kdbx
test/issue-24-kdbx-3.1/: Test1.kdbx  Test2.kdbx
test/test-empty_issue-60-crash-on-linux-abc123/: result_--password-a demopass --password-b abc123  result_--password-a demopass --password-b abc123 --no-color  result_--password-a demopass --password-b abc123 --verbose --mask-passwords  result_--password-a demopass --password-b abc123 --verbose --no-color
test/test-empty_test/: result_--passwords demopass --mask-passwords  result_--passwords demopass --no-color --mask-passwords  result_--passwords demopass --verbose --mask-passwords  result_--passwords demopass --verbose --no-color
test/test-large-withfile_empty/: result_--password-a samplepassword --password-b demopass  result_--password-a samplepassword --password-b demopass --no-color  result_--password-a samplepassword --password-b demopass --verbose  result_--password-a samplepassword --password-b demopass --verbose --mask-passwords  result_--password-a samplepassword --password-b demopass --verbose --no-color
test/test-multiple-entries-2_multiple-entries/: result_--passwords demopass  (+7 more)
(+61 files in other folders)
