[package]
name = "keepass-diff"
description = "This CLI-tool reads two Keepass (.kdbx) files and prints their differences."
keywords = ["cli", "diff", "keepass"]
repository = "https://github.com/Narigo/keepass-diff"
license = "MIT"
readme = "README.md"
version = "1.1.4"
authors = ["Joern Bernhardt <joern.bernhardt@googlemail.com>"]

# See https://crates.io/category_slugs
categories = ["command-line-utilities"]

exclude = [
  "docs/*"
]

[dependencies]
clap = { version = "3.0.10", features = ["cargo", "env", "derive", "wrap_help"] }
keepass = "=0.4.10"
rpassword = "7.2.0"
termcolor = "1.1.2"
