[package]
name = "keepass-diff"
description = "This CLI-tool reads two Keepass (.kdbx) files and prints their differences."
keywords = ["cli", "diff", "keepass"]
repository = "https://github.com/Narigo/keepass-diff"
license = "MIT"
readme = "README.md"
version = "1.2.0"
authors = ["Joern Bernhardt <joern.bernhardt@googlemail.com>"]
edition = "2021"

# See https://crates.io/category_slugs
categories = ["command-line-utilities"]

exclude = ["docs/*"]

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.7", features = ["cargo", "env", "derive", "wrap_help"] }
keepass = "0.6.6"
rpassword = "7.2.0"
termcolor = "1.3.0"
